<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="reg_title">မင်္ဂလာပါ အကောင့်ဖွင့်ရန်အောက်ပါဖောင်ကိုဖြည့်ပါ </string>
    <string name="Login_title">Login</string>
    <string name="fullName">Name </string>
    <string name="email">Email</string>
    <string name="logo_desc">App Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">I don\'t have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_prompt">Don\'t have an account, Sign Up?</string>
    <color name="backgroundColor">#F5F5F5</color>
    <color name="buttonColor">#6200EE</color>
    <color name="white">#FFFFFF</color>
    <color name="linkColor">#3F51B5</color>
    <color name="gray">#808080</color>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">အကောင်ဖွင့်ပါ </string>
    <string name="login_welcome">Login</string>
    <string name="loginWithGoogle">Google ဖြင့်၀င်ရောက်ရန်  </string>
    <string name="loginWithFacebook">Facebook ဖြင့်၀င်ရောက်ရန်  </string>
</resources>
